--- a/index.html
+++ b/index.html
@@ -15,13 +15,28 @@
 <div id="tester" style="width:1100px;height:700px;"></div>
   <script>
     var trace1 = {
-    x: ['Blue470',525,560,585,600,645,700,735,810,880,940],
-    y: [9.577922078,8.873239437,12.67409471,31.18741059,
-      47.73722628,74.13533835,87.82343988,88.0910683,
-      97.6340694,103.2258065,105.8479532], type: 'line'
-  }], {
-    margin: {t: 0}
-  });
+    x: ['Blue 470','Cyan 525','Green 560','Yellow 585','Orange 600','Red 645','DeepRed 700','IR1 735','IR2 810','IR3 880','IR4 940'],
+    y: ['9.577922078','8.873239437','12.67409471','31.18741059',
+      '47.73722628','74.13533835','87.82343988','88.0910683',
+      '97.6340694','103.2258065','105.8479532'], type: 'line'
+  };
+    
+    var data = [trace1];
+
+    var layout = {
+        title: 'Reflectance of Purple Folder',
+        width: 1200,
+        height: 800,
+        autosize: false,
+        xaxis: {
+            title: 'Color + Wavelength (nm)'
+        },
+        yaxis: {
+            title: 'Reflectance (%)',
+            automargin: true
+        },
+        margin: { l: 0 }, // Adjust the top margin (you can also set l, r, and b for left, right, and bottom margins)
+    };
 </script>
 
 
