--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
 
 <div id="tester" style="width:1100px;height:700px;"></div>
   <script>
-    var trace1 = {
+    var tester = {
     x: ['Blue 470','Cyan 525','Green 560','Yellow 585','Orange 600','Red 645','DeepRed 700','IR1 735','IR2 810','IR3 880','IR4 940'],
     y: ['9.577922078','8.873239437','12.67409471','31.18741059',
       '47.73722628','74.13533835','87.82343988','88.0910683',
       '97.6340694','103.2258065','105.8479532'], type: 'line'
   };
     
-    var data = [trace1];
+    var data = [tester];
 
     var layout = {
-        title: 'Reflectance of Purple Folder',
-        width: 1200,
-        height: 800,
+        title: 'Red Folder Data (λ)',
+        width: 1100,
+        height: 700,
         autosize: false,
         xaxis: {
             title: 'Color + Wavelength (nm)'
