--- a/index.html
+++ b/index.html
@@ -12,31 +12,32 @@
 
 
 
-<div id="tester" style="width:1100px;height:700px;"></div>
-  <script>
-    var tester = {
-    x: ['Blue 470','Cyan 525','Green 560','Yellow 585','Orange 600','Red 645','DeepRed 700','IR1 735','IR2 810','IR3 880','IR4 940'],
-    y: ['9.577922078','8.873239437','12.67409471','31.18741059',
-      '47.73722628','74.13533835','87.82343988','88.0910683',
-      '97.6340694','103.2258065','105.8479532'], type: 'line'
-  };
-    
-    var data = [tester];
+<div id="tester1" style="width:1100px;height:700px;"></div>
+<script>
+  TESTER = document.getElementById('tester1');
+  Plotly.newPlot(TESTER, [{
+    x: [470,525,560,585,600,645,700,735,810,880,940],
+    y: [9.577922078,8.873239437,12.67409471,31.18741059,
+      47.73722628,74.13533835,87.82343988,88.0910683,
+      97.6340694,103.2258065,105.8479532], type: 'line'
+  }], {
+    margin: {t: 0}
+  });
+</script>
 
-    var layout = {
-        title: 'Red Folder Data (λ)',
-        width: 1100,
-        height: 700,
-        autosize: false,
-        xaxis: {
-            title: 'Color + Wavelength (nm)'
-        },
-        yaxis: {
-            title: 'Reflectance (%)',
-            automargin: true
-        },
-        margin: { l: 0 }, // Adjust the top margin (you can also set l, r, and b for left, right, and bottom margins)
-    };
+
+
+<div id="tester2" style="width:1100px;height:700px;"></div>
+<script>
+  TESTER = document.getElementById('tester2');
+  Plotly.newPlot(TESTER, [{
+    x: [470,525,560,585,600,645,700,735,810,880,940],
+    y: [22.88961039,27.18309859,21.7270195,12.1602289,
+      10.80291971,16.9924812,27.09284627,22.41681261,
+      57.0977918,85.64516129,94.73684211], type: 'line'
+  }], {
+    margin: {t: 0}
+  });
 </script>
 
 
